# pyreg

./: .gitignore  LICENSE.md  build_package.py  main.py  pyproject.toml  requirements-dev.txt
pyreg/: __main__.py  diff.py  key_data_types.json
wpyreg/: __main__.py  _key_data_types_generator.py
