[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyreg"
version = "0.0.0"
requires-python = ">=3.10"
description = "python library for handling windows registry with some additional features"
readme = { file = "README.md", content-type = "text/markdown" }
license.file = "LICENSE.md"
authors = [
  { name = "Wojciech Sobczak", email = "wojcienty@gmail.com" }
]
maintainers = [
  { name = "Wojciech Sobczak", email = "wojcienty@gmail.com" }
]
keywords = ["windows", "registry"]

[project.scripts]
pyreg = "pyreg.__main__:main"


[project.urls]
Homepage = "https://github.com/WojciechSobczak/pyreg"
Documentation = "https://github.com/WojciechSobczak/pyreg"
Repository = "https://github.com/WojciechSobczak/pyreg.git"
Issues = "https://github.com/WojciechSobczak/pyreg/issues"